# magneto-locator

./: LICENSE  README.md
collect/: CMakeLists.txt  Makefile
collect/src/: HMC5883.h  buttons.c  buttons.h  intdef.h  io.c  io.h  magneto.c  magneto.h  main.c  rgb_led.c  rgb_led.h  startup_gcc.c  timer.c  timer.h  uart.c  uart.h
libprocess/: CMakeLists.txt
libprocess/src/: fir.cpp  fir.hpp  geometry.cpp  geometry.hpp  process.cpp  process.hpp  shared.cpp  shared.hpp  shared_output.cpp  shared_output.hpp
process/: CMakeLists.txt  main.cpp
process/src/: .sensor.cpp  .sensor.hpp  geometry.cpp  geometry.hpp  main.cpp  process.cpp  process.hpp  serial.cpp  serial.hpp  shared_output.cpp  shared_output.hpp
visualize/: CMakeLists.txt
visualize/src/: Visualize.cpp  Visualize.hpp  main.cpp
visualize/src/core/: Engine.cpp  Engine.hpp  Handlers.cpp  Handlers.hpp  Window.cpp  Window.hpp
visualize/src/module/: Font.cpp  Font.hpp  Log.cpp  Log.hpp  TextureMap.cpp  TextureMap.hpp
